Create task to proxy requests.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ plugins/*
 !plugins/wordpress-fieldmanager
 !plugins/voicewp
 !plugins/hello-alexa
+plugins/hello-alexa/node_modules/
 
 /.htaccess
 /license.txt
